--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "ant-design-vue": "^4.2.1",
     "axios": "^1.6.8",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0",
@@ -19,6 +20,7 @@
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
+    "unplugin-vue-components": "^0.27.0",
     "vite": "^5.2.8"
   }
 }
