--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,8 @@
     "@ant-design/icons-vue": "^7.0.1",
     "ant-design-vue": "^4.2.1",
     "axios": "^1.6.8",
+    "clipboard": "^2.0.11",
+    "dotenv": "^16.4.5",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0",
     "vuex": "^4.1.0"
